--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MPL-2.0",
   "devDependencies": {
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
-  }
+    "typescript": "^3.1.3"
+  },
+  "dependencies": {}
 }
